# geektrust-power-g-man

./: .gitignore  geektrust-power-g-man.sln  mkzip.bat
cpp/: CMakeLists.txt  Makefile  main.cpp  mkzip.bat  rcmake.bat  run.bat
cpp/sample/: out1.txt  out3.txt
cpp/src/: controller.cpp  controller.h  direction.cpp  direction.h  point.h
csharp/: csharp.sln  mkzip.bat
csharp/GeekTrust/: Controller.cs  GeekTrust.csproj  Point.cs  Program.cs  Solution.cs  run.bat
csharp/GeekTrust.Tests/: GeekTrustTests.csproj
go/src/geektrust/: go.mod  main.go  run.bat
java/: jacoco.xml  mkzip.bat  pom.xml  run.bat
java/sample/: in0.txt  out2.txt
java/src/main/java/: Direction.java  FastReader.java  Main.java  Point.java  Solution.java
java/src/test/java/: MainTest.java
python/: .coverage  geektrust.py  mkzip.bat  run.bat
python/src/: controller.py  point.py  solution.py
python/tests/: test_dirction.py
